<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:fitsSystemWindows="true"
        android:gravity="top">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-10dp"
            android:visibility="visible">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:paddingBottom="5dp"
                android:paddingLeft="24dp"
                android:paddingTop="5dp">

                <TextView
                    android:id="@+id/back_click"
                    android:layout_width="match_parent"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:theme="@style/TextViewBlack"
                    android:text="@string/Measurementstitile"
                    android:visibility="visible" />

            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:orientation="horizontal"

                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:orientation="horizontal"
                    android:layout_height="300dp"
                    android:layout_weight="0.7"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="top"
                        android:gravity="top"
                        android:src="@drawable/standing_human_body" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_weight="1"
                    >
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:layout_weight="4"
                        >

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            >

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:theme="@style/TextViewMesurement">

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/shoulder"
                                    android:inputType="textEmailAddress"
                                    android:textColor="@color/white" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:theme="@style/TextViewMesurement">

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/chest"
                                    android:inputType="textEmailAddress"
                                    android:textColor="@color/white" />
                            </android.support.design.widget.TextInputLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            >

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:theme="@style/TextViewMesurement">

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/waist"
                                    android:inputType="textEmailAddress"
                                    android:textColor="@color/white" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:theme="@style/TextViewMesurement">

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/inseam"
                                    android:inputType="textEmailAddress"
                                    android:textColor="@color/white" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            >

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="1"
                                android:theme="@style/TextViewMesurement">

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/neck"
                                    android:inputType="textEmailAddress"
                                    android:textColor="@color/white" />
                            </android.support.design.widget.TextInputLayout>

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:theme="@style/TextViewMesurement">

                                <EditText
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:hint="@string/arm"
                                    android:inputType="textEmailAddress"
                                    android:textColor="@color/white" />
                            </android.support.design.widget.TextInputLayout>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:visibility="visible"
                            android:orientation="vertical"
                            >

                            <android.support.design.widget.TextInputLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:layout_weight="1"
                                android:theme="@style/TextViewMesurement">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="34dp"
                                    android:hint="@string/Tip"
                                    android:inputType="textEmailAddress"
                                    android:textColor="@color/white" />
                            </android.support.design.widget.TextInputLayout>


                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="78dp"
                                android:textSize="@dimen/_10sdp"
                                android:hint="@string/Tiptiltle"
                                android:inputType="textMultiLine"
                                android:textColor="@color/white"
                                android:theme="@style/TextViewMesurement" />

                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/btn_submit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"

                android:padding="12dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:background="@color/colorPrimary"
                android:text="@string/savetoconstinue"/>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>